--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,11 +78,12 @@ main{
 .menu .items .item a span {
     font-size: 0.8em;
     position: absolute;
-    left: 55px;
+    left: 50px;
     width: calc(100% - 70px);
     animation: opacitySpan 2s;
     height: auto;
     padding: 10px;
+    padding-left: 0px;
     font-size: 1em;
 }
 
@@ -381,7 +382,7 @@ main{
 
 .account .profile .data_profile img {
     width: 40%;
-    height: fit-content;
+    height: 100%;
     max-width: 150px;
     min-width: 50px;
 }
@@ -688,8 +689,7 @@ main{
 
 .settings .container_settings .data_settings .data.user img {
     max-width: 200px;
-    width: 40%;
-    height: fit-content;
+    width: 40%;    
 }
 
 .settings .container_settings .data_settings .data.user .change_img {
@@ -776,7 +776,8 @@ main{
 
 /******** Respoinsive ********/
     
-@media only screen and (max-width: 390px ) {
+@media only screen and (max-width: 390px ) {    
+
     .settings .container_settings .data_settings .data .input_data {
         width: 100%;
     }
@@ -794,6 +795,30 @@ main{
 }
 
 @media only screen and (max-width: 500px ) {
+
+/******** account ********/
+
+    .account .profile .data_profile .info {
+        width: 50%;
+        padding-top: 15%;
+    }
+
+    .account .profile .data_profile img {        
+        width: 50%;
+        padding: 15% 0%;
+    }
+
+/******** settings ********/
+
+    .settings .container_settings .data.user .image_user .change_img {
+        width: 50%;
+        padding-top: 15%;
+    }
+
+    .settings .container_settings .data.user .image_user img {        
+        width: 50%;
+        padding: 15% 0%;
+    }
 
 /******** List ********/
 
