--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,12 +78,11 @@ main{
 .menu .items .item a span {
     font-size: 0.8em;
     position: absolute;
-    left: 50px;
+    left: 55px;
     width: calc(100% - 70px);
     animation: opacitySpan 2s;
     height: auto;
-    padding: 10px;
-    padding-left: 0px;
+    padding: 10px 0px 6px 5px;    
     font-size: 1em;
 }
 
@@ -180,6 +179,12 @@ main{
 
 .activity input[type="button"]:active {
     background-color: rgb(0, 36, 66);
+}
+
+/******** Hide title mode ********/
+
+.hide_title .activity h1 {
+    display: none;
 }
 
 /******** Light style mode ********/
@@ -744,14 +749,6 @@ main{
     margin-bottom: 20px;
 }
 
-.settings .container_settings .data_settings .data.location .label_description {
-    width: 100%;
-}
-
-.settings .container_settings .data_settings .data.location textarea {
-    margin-left: 40%;
-}
-
 .settings .container_settings .data_settings .other_options {
     width: 100%;
     display: flex;
@@ -759,11 +756,27 @@ main{
     flex-direction: column;
 }
 
-.settings .container_settings .data_settings .other_options .light_mode {
+.settings .container_settings .data_settings .other_options .option {
     width: 100%;
-    padding-left: 20px;
-    
+    display: flex;
 }
+
+.settings .container_settings .data_settings .other_options .option label {
+    width: 50%;
+    min-width: 150px;
+    padding: 15px 0px 15px 20px;
+}
+
+.settings .container_settings .data_settings .other_options .option .button {
+    width: 50%;
+    min-width: 50px;
+}
+
+.settings .container_settings .data_settings .other_options .option .button input{
+    text-align: center;
+    float: right;
+}
+
 .settings .container_settings .data_settings .other_options .button_save {
     width: 100%;
     padding-right: 10px;
@@ -795,6 +808,11 @@ main{
 }
 
 @media only screen and (max-width: 500px ) {
+
+    .menu .items .item a span {
+        left: 50px;
+        padding-left: 0px;
+    }
 
 /******** account ********/
 
@@ -851,6 +869,16 @@ main{
 }
 
 /******** Animations ********/
+
+@keyframes slideHideTitle {
+    from {
+        height: 100%;
+    }
+
+    to {
+        height: 0%;
+    }
+}
 
 @keyframes slideChangeActivity {
     from {
